--- a/html-templates/book.html
+++ b/html-templates/book.html
@@ -15,6 +15,12 @@
         href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.4/dist/css/datepicker-bs4.min.css">
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
     <link rel="stylesheet" href="static/css/style.css" type="text/css">
+
+    <style>
+        .datepicker {
+            z-index: 10000;
+        }
+    </style>
 </head>
 
 <body>
@@ -83,6 +89,24 @@
                         </div>
                     </div>
 
+                    <div class='form-row'>
+                        <div class='col'>
+                            <div class='form-row' id="reservation-dates">
+                                <div class='col'>
+                                    <input type="text" class='form-control' name="start"
+                                        placeholder='Starting Arrival Date' required>
+
+                                </div>
+                                <div class='col'>
+                                    <input type="text" class='form-control' name="end" placeholder='Departure Date'
+                                        required>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+
                     <hr>
 
                     <button type="submit" class="btn btn-primary">Search Avalibility</button>
@@ -99,6 +123,9 @@
                 </p>
             </div>
         </div>
+
+
+
     </div>
 
 
@@ -118,7 +145,173 @@
     <script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.4/dist/js/datepicker-full.min.js"></script>
     <script src="https://unpkg.com/notie"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="static/js/main.js"></script>
+    <!-- <script src="static/js/main.js"></script> -->
+
+
+    <script>
+        // Example starter JavaScript for disabling form submissions if there are invalid fields
+        (function () {
+            'use strict'
+
+            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+            var forms = document.querySelectorAll('.needs-validation')
+
+            // Loop over them and prevent submission
+            Array.prototype.slice.call(forms)
+                .forEach(function (form) {
+                    form.addEventListener('submit', function (event) {
+                        if (!form.checkValidity()) {
+                            event.preventDefault()
+                            event.stopPropagation()
+                        }
+
+                        form.classList.add('was-validated')
+                    }, false)
+                })
+        })()
+
+
+        let attention = Prompt()
+        document.getElementById('colorButton').addEventListener("click", function () {
+
+            let html =
+                `<form id="check-availability-form" action="" method ="POST" novalidate class="needs-validation">
+                <div class="form-row">
+                    <div class="col">
+                        <div class="form-row" id="reservation-dates-modal">
+                                <div class="col">
+                                    <input disabled required class="form-control" type="text" name="start" id="start" placeholder="Arrival" >    
+                                </div>
+                                <div class="col">
+                                    <input disabled required class="form-control" type="text" name="end" id="end" placeholder="Departure" >
+                                </div>
+                        </div>    
+                    </div>
+                </div>    
+            </form>`
+            // notify("This is my message", "success")
+            // notifyModal("Title", "Hello world", "success", "BttonText")d
+            attention.custom({
+                msg: html,
+                title: "Choose your Dates"
+            })
+        })
+        const elem = document.getElementById('reservation-dates');
+        const rangepicker = new DateRangePicker(elem, {
+            // ...options
+        });
+
+        function notify(msg, type) {
+            notie.alert({
+                type: type, // optional, default = 4, enum: [1, 2, 3, 4, 5, 'success', 'warning', 'error', 'info', 'neutral']
+                text: msg,
+            })
+        }
+
+        function notifyModal(title, text, icon, confirmButtonText) {
+            Swal.fire({
+                title,
+                text,
+                icon,
+                confirmButtonText
+            })
+        }
+
+        function Prompt() {
+            let toast = function (c) {
+                const {
+                    msg = '',
+                    icon = "success",
+                    position = "top-end"
+                } = c;
+
+                const Toast = Swal.mixin({
+                    toast: true,
+                    title: msg,
+                    position,
+                    icon,
+                    showConfirmButton: false,
+                    timer: 3000,
+                    timerProgressBar: true,
+                    didOpen: (toast) => {
+                        toast.onmouseenter = Swal.stopTimer;
+                        toast.onmouseleave = Swal.resumeTimer;
+                    }
+                });
+                Toast.fire({});
+            }
+
+            let sucess = function (c) {
+                const {
+                    msg = "",
+                    title = "",
+                    footer = ""
+                } = c;
+
+                Swal.fire({
+                    icon: "success",
+                    title,
+                    text: msg,
+                    footer
+                });
+            }
+            let error = function (c) {
+                const {
+                    msg = "",
+                    title = "",
+                    footer = ""
+                } = c;
+
+                Swal.fire({
+                    icon: "error",
+                    title,
+                    text: msg,
+                    footer
+                });
+            }
+
+            async function custom(c) {
+                const { msg = '', title = '' } = c;
+
+                const { value: formValues } = await Swal.fire({
+                    title,
+                    html: msg,
+                    backrop: false,
+                    focusConfirm: false,
+                    showCancelButton: true,
+                    focusConfirm: false,
+                    willOpen: () => {
+                        const elem = document.getElementById('reservation-dates-modal');
+                        const rangePicker = new DateRangePicker(elem, {
+                            showOnFocus: true,
+                        })
+                    },
+                    didOpen: () => {
+                        document.getElementById('start').removeAttribute('disabled')
+                        document.getElementById('end').removeAttribute('disabled')
+                    },
+                    preConfirm: () => {
+                        return [
+                            document.getElementById("start").value,
+                            document.getElementById("end").value
+                        ];
+                    }
+                });
+                if (formValues) {
+                    Swal.fire(JSON.stringify(formValues));
+                }
+            }
+
+            return {
+                toast,
+                sucess,
+                error,
+                custom,
+            }
+        }
+
+
+    </script>
 </body>
 
 </html>
